--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "encoding": "^0.1.13",
     "next": "^13.4.12",
     "pexels": "^1.4.0",
     "react": "^18.2.0",
