--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meow-next-app",
+  "name": "photo-stash",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "zustand": "^4.4.3"
   }
 }
