--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "encoding": "^0.1.13",
+    "js-file-downloader": "^1.1.25",
     "next": "^13.4.12",
     "pexels": "^1.4.0",
     "react": "^18.2.0",
